themes/default/css/base.css
/* ... */
li.notification-warning-box {
    font-weight: bold;
    color: #333;
    font-size: 13px;
    text-indent: 10px;
}

li.notification-error-box {
    font-weight: bold;
    color: #cc0000;
    font-size: 12px;
    text-indent: 10px;
}

div.hint {
    color: black;
    border: 2px solid #000000;
    background-color: #F08080;
    padding: 5px;
    margin-top: 5px;
}


/*** FORMS ***/

.sectionBox{
    margin: 0px 0px 0px 0px;
    padding-top: 5px;
    margin-bottom: 10px;

}

.quickAddSectionBox{
    margin: 0px;
    padding: 10px;
}

/* Style for labels on standard form fields (ie. no error) */
.formLabel {
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-size:11px;
    color: #333333;
    margin-bottom: 5px;
    font-weight: bold;
    text-align: left;
}

.formLabelPlain {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size:11px;
    color: #333333;
    margin-bottom: 5px;
    font-weight: normal;
    text-align: left;
}

.formLabelText {
    padding-left: 10px;
	padding-bottom: 3px;
	display: inline-block;
}

.formLabelSubtext {
    padding-left:5px;
    font-weight: normal;
    font-size: 9px;
}

.bundleLabel {
	position: relative;
	
    font-family: "DIN-Regular", sans-serif;
    font-size:13px;
    color: #333;
    margin-bottom: 10px;
    padding-top: 5px;
    font-weight: bold;
    text-align: left;
    background-color:#ededed;
    border: 2px solid #ededed;
    -moz-border-radius-topleft: 4px;
    -webkit-border-top-left-radius: 4px;
    -moz-border-radius-topright: 4px;
    -webkit-border-top-right-radius: 4px;
    border-top-right-radius: 4px;
    border-top-left-radius: 4px;
}

.bundleLabel a.bundleDocumentationLink {
    width:22px;
    height:12px;
    display:inline-block;
    overflow:hidden;
    background-image: url('../graphics/icons/doc.png');
    background-size:20px 12px;
    background-repeat: no-repeat;
    text-indent: 30px;
}
.bundleLabel .expand img{
	width:16px;
	height:12px;
	margin-top: -2px;
}
.settingsBundle {
    padding: 10px;
}

/* often times referred to as bundlePreview */
.bundleContentPreview {
	text-align:left;
	display:inline-block;
	color:#888888;
	font-family: helvetica, sans-serif;
	font-weight:normal;
	font-size:13px;
	padding-top:2px;
	padding-left:10px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	width: 40%;
	vertical-align:bottom;
	padding-bottom:5px;
}

/* Style for labels on form fields where an error has occurred */
.formLabelError {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size:10px;
    color: #cc0000;
    margin-bottom: 5px;
    text-align: left;
}

.bundleLabelError {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size:11px;
    color: #cc0000;
    margin-bottom: 5px;
    text-align: left;
}

/* summary page */

#summary {
	margin-top:20px;
	padding-bottom:60px;
}
#summary .summaryImages {
	margin-bottom: 20px;
	display: inline-block;
}
#summary #title{
    font-family: 'din-regular', Arial, Helvetica, sans-serif;
    font-size:15px;
    color: #333;
    margin-bottom: 10px;
    padding-bottom:10px;
    border-bottom:2px solid #eee;
    font-weight: bold;
    text-align: left;
}
#summary .searchFormSelector {
	margin-bottom: 3px; 
	font-size: 11px;
	display:inline;
}
#summary #printButton{
    float:right;
    width:30px;
    margin:0px 5px 5px 10px;
}
#summary .unit{
    margin-bottom:10px;
    font-size:13px;
    clear:both;
    border-bottom:1px solid #ccc;
    padding-bottom:5px;
}
#summary .heading{
	font-family: 'DIN-Regular', Helvetica, sans-serif;
	font-size: 13px;
	color: #333333;
	text-transform:uppercase;
	text-align: left;
	width:30%;
    overflow: scroll;
	display:inline-block;
	font-weight:bold;
	color: #666;
}
#summary .summaryData{
	width: 70%;
	display: inline-block;
	font-family: 'DIN-Regular', Helvetica, sans-serif;
	color:#333;
}
#summary .thumbnailsImageContainer{
    border:1px solid #DDDDDD;
    width:120px;
    position:relative;
}
#summary .oneThumbContainer {
	position:relative;
}
#summary .downloadMediaContainer {
	display:none;
	position:absolute;
	top:0px;
	left:0px;
}
#summary .notDefined{
    color:#999999;
}

.quick-search-form-container {
    position: absolute;
    width: 150px;
    left: -126px;
    display: none;
    padding: 5px;
    z-index:10;
    opacity: 0.95;
    border: 1px solid #666666;
}

.quick-search-form-container input {
    font-size: 14px;
    width: 150px;
}

.quick-search-form-container a {
    font-size: 12px;
    padding: 0em 0em;
    border: none;
    text-decoration: none;
    float:			none;
    position:		static;
    display:		inline;
}

.quick-search-form-container a:hover {
    font-size: 12px;
    background: none;
    background-color: transparent;
    outline: 0;
    color: transparent;
}

/* form field tooltips */
.tooltipFormat h3 {
    padding: 0px 0px 10px 0px !important;
    margin: 0px !important;
    font-color: #000000 !important;
    text-align:left !important;
}
.tooltipFormat {
	color:#fff !important;
	background-color:#333 !important;
	background-image:none !important;
	border-radius:4px !important;
	font-size:12px !important;
	border: 0px !important;
	font-family: "helvetica neue", arial, sans-serif;
	text-align:left !important; 
}

/*** Button styles ***/
div.button{
    padding-left:10px;
    font-size: 11px;
}
div.button a{
    color: #134959;
    text-decoration: none;
    font-size: 11px;
    font-family: Din-regular;
}

div.button a:hover{
    color: #1ab3c8;
}

div.button img{
    vertical-align: top;
	margin-top: -1px;
}
a.button,
.btn {
    color: #1ab3c8;
    text-decoration: none;
    font-size: 11px;
    font-weight:normal;
    font-family: "DIN-Regular";
}
button.btn {
    border: none;
    background: transparent;
    cursor: pointer;
}
.btn,
.btn-group {
    padding: 4px;
}
#leftNav a.button {
    color: #134959;
}
.searchNav a.button {
	color: #134959;
	font-weight:bold;
}
a.button:hover{
    color: #1ab3c8;
}
/* ... */

